@@ -8,25 +8,13 @@ DIST VOS-genpatches-6.1.8.tar.bz2 1224 SHA256 005d960017363d7f0c9807da6f706ec991
 DIST virtuoso-opensource-6.1.6.tar.gz 113255048 SHA256 c6bfa6817b3dad5f87577b68f4cf554d1bfbff48178a734084ac3dcbcea5a037 SHA512 d423e872bce8737f60a348c89e24f20de5581e7b943856df534b4c86015e50969cbe46fe0c73eb0f1a29a1a45f2d7cebca98564ab38044f1f731f661635ded55 WHIRLPOOL e44df5c484a92d3197c06fb4a3e338bbabfb49e0b087126799bfe0415cd6335dd61fa664f6b50cb4300d554b1519d70b51a1b27a3837faee2dc9df18459b68b1
 DIST virtuoso-opensource-6.1.8.tar.gz 117756529 SHA256 08d05c6165117de0370e81aa89ddab618e645b5110be301f72e6ffea7044ca50 SHA512 34812406eaa087fa200548c678de748a552a4189f6818df335d80e7680f0376c949cf1d0a2c4caddeafd0d79fac52d21b57b2150297368a7268fc3b83bc0af6b WHIRLPOOL 10bba34ee9a66fa46e3e60defbed7767df23e1bf826d8684c2cf2f7da87c05feb9798fdef85958d3ac81fb66208bed33dbd147d826ccc7b7d3b896133bc332c6
 EBUILD virtuoso-server-6.1.6.ebuild 1946 SHA256 80b73fc69989fb9f0aa9782bdfa60d94fcaba34f2d90dd9f73308ca62854fe61 SHA512 150e8e5312019269731a173204602e688b16c0d94e760515c4ffa61dcfdb2238829212e7610962eab9f22d251ee0403dfdc4923824c3d73d4e6b1701473964af WHIRLPOOL 3ed5d9ea3a84df1ef777f21d1019d62960fc8a526192e0a911577602a472952e518000e5f2dc46645d9695ea47cc26ad1870cb8ff69069c67c82453d737294ce
-EBUILD virtuoso-server-6.1.8.ebuild 1900 SHA256 1fe1c7dc206fe496d667b7ae1cb899d0c16c4890b03286f02ee7dc8e42415033 SHA512 440e955a3f3efd050b808506bdc579ba6a27a94b35e95e50577415066c52a58a8730d3a10d9475627c31206db22844bf31da595fe3624707a539a05cd6b68acf WHIRLPOOL 2fc1e2571b52d23716c9cc099cd84ad7360cb645752c28243d6aa3b8c47854ca7ef069408cdd5db624dd6d1b57608b363e83bee4850ee4f3457498ddc9e567cc
-MISC ChangeLog 7307 SHA256 f6b85b5e07672bad6512de3dc63c034d6795f921773f42c5e9b92a53ae4ddf81 SHA512 3a43682bdcf7ae008fce7a34d956dff785f47c6306911f1a6e434bae4c6cb87dd6acc9fc63e2527fc8e1dce5df475679260c0b91a2a8537607d7ae14e62f30ab WHIRLPOOL f0ed5872541189e0090b71da936353f6fde12013c70233f13300fe4230cc5b1fa877ad003fdf218f2ab19afe79290251f56d0f411b607a8c569b76bd63e55bb5
+EBUILD virtuoso-server-6.1.8.ebuild 1894 SHA256 4dec8258c086e3cdba061038331c83d5638e7fd236c64ec4603405688fff9b40 SHA512 f33704cf9f9c71533c111bb756479c7f9b4b58162228a9a89610fb819b92c3d38ee78f31dc5111fe9cec1e8c0a9bcf5f04ffa38117527ece3b138db0134742aa WHIRLPOOL 69c12223d87d81c926c30fb22adcb344b6e6263388240196c6da333b8aa0f34c7c2ace11c6b4bd47c0e971bda97336d47618794602186453b577ae3613d768a5
+MISC ChangeLog 7414 SHA256 68e319a7b8c8fc0705cef2e417370ccafa2124ad15c515cd13c019aa8b258c55 SHA512 8d703f87f8e60e872193b987eab8b186c87bb04967bbdf62566327055a60ba6d8ff366aaf7a36b472ff5f2dafe6b2629632039cf40fc2064a46453924fce81d0 WHIRLPOOL 5cd02368943b68329b87c8c91e0c0b6deccf794b2da6384a713f553b267ce90b464e681e17160844333127beb970ed70457c43c6cd6ca688cc3f801587d4bcc1
 MISC metadata.xml 871 SHA256 63096d13d0e59b6562cdc369d4eaadba2b6100e9d5a0d2105500af80e86d6fb6 SHA512 3b55bd70ad038402a02f72dffd7e493175d442eb1bded7c77c7dd3c452a459a758a5bd4a18bde5285f2995805ba516e025cae7927f04d7470686f196ce1b0231 WHIRLPOOL 38652c8c3379874735b6377537dce6bf4e81b0f009a4864d71aea4b91ea7de4861df7d29d50635f0afbdb1cb6d0627ee3bd0f75a1662b45eafe1f2093908b2fb
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.22 (GNU/Linux)
+Version: GnuPG v2
 
-iQJ8BAEBCABmBQJTGTzKXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQxMzgwNDhGMjg4MzhERTE1NTY2NjA4MkZE
-MUJBQjZCNTI4REIwMjlDAAoJENG6trUo2wKc4oAP/iAdh44A18nESJ/OBgaCIEpL
-SXnNq7EnkOIiQdPUV6pgEZrCMRLK2hdTpBsr3RA57S0Ajg9ZfMn/bqGMmLzLCP/m
-ig3RdK2/oR/MRa8Sk6FsgcXxoQb2cO6q85HLf6FWwvFjSWhK5/51OQSwv1DTiQQB
-qsNkpwf7ySHHcsfHJrKMzmR2951VB/0Tplx3PrT5pT6xFKgypkxt01yPVW+jWVsu
-cWfDc4mydDP3pIdxii2zG6+p/fRVx957rAqvvnpnOlzQR2GGof0SH6jTuPd+XzX7
-7rG841g3s5cH5sPbS6rxfpPH5RtPyqwM1Y/RSo/dKlp3iBZOWsMyhHMsNIGY+kYg
-5KyWahP6wsGIads3ZZe+qMtBFb++5m69U6AkjzB8AgSldwJjS9yfuxLL5VPOy4z6
-nU8MekKNpdBzT3ep0SRrh61v2KlfleYNhi5w/BeT8CIV7PprZQ79us6adlnFzqUF
-owwCOCb7F2WnNpOuSXfKwGl8VZ/5itWnMaprXWvkK8wzaN2YaEdvKooLiOw4Pi+S
-NJ4eFJ2lHa1scw0s9CTZ7HSE7fGs8ooAEUeIfnbcXjwwPDFYzT7lwl9bDSHljt/i
-Svwwsm4cvlTDCwEanlywyi0AibzuJPo8RlDZ+M/wAavh5KaUiJMJctwq16ZUI6PU
-lqe/75+JN/KZu74bl6A5
-=J/ar
+iEYEAREIAAYFAlVM2zkACgkQVWmRsqeSphNscACdGF2HkgpuTs92wX45Bh5dQadF
+s7EAnRly7fHi0Xmr07j/YupyWB5kSTkU
+=KeOF
 -----END PGP SIGNATURE-----
