@@ -3,10 +3,10 @@ DEPEND=>=dev-libs/openssl-0.9.7i:0 !<sys-devel/gettext-0.18.1.1-r3 || ( >=sys-de
 DESCRIPTION=ODBC driver for OpenLink Virtuoso Open-Source Edition
 EAPI=5
 HOMEPAGE=http://virtuoso.openlinksw.com/wiki/main/Main/
-KEYWORDS=~amd64 ~arm ~ppc ~ppc64 ~x86 ~amd64-fbsd ~x86-fbsd ~amd64-linux ~x86-linux
+KEYWORDS=~amd64 ~arm ~ppc ppc64 ~x86 ~amd64-fbsd ~x86-fbsd ~amd64-linux ~x86-linux
 LICENSE=GPL-2
 RDEPEND=>=dev-libs/openssl-0.9.7i:0
 SLOT=0
 SRC_URI=mirror://sourceforge/virtuoso/virtuoso-opensource-6.1.8.tar.gz mirror://gentoo/VOS-genpatches-6.1.8.tar.bz2
 _eclasses_=autotools	999c8f6cf5d91495cb0779588f20716c	eutils	9fb270e417e0e83d64ca52586c4a79de	libtool	52d0e17251d04645ffaa61bfdd858944	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	c961250d50160cd37d6b7fd9e8429c92	virtuoso	5f957732573e5110ce1a032fef9fdeea
-_md5_=fe5401e944ebc44d696875bb71cfd3ec
+_md5_=3638f771b200486b3067c47c08e4c314
